--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CalendarActivity"/>
+        <receiver android:name=".ReminderReceiver" android:exported="true" />
     </application>
 
 </manifest>
